--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "waze-heatmap"
-version = "0.1.0"
-edition = "2021"
+name = "waze-heatmap-server"
+version = "1.0.0"
+edition = "2023"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
