--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,6 @@ reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 config-file = "0.2.3"
+log = "0.4.20"
+env_logger = "0.11.1"
+chrono = "0.4.33"
